[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "OkBloomer"
version = "0.0.1"
requires-python = ">= 3.10"
dependencies = [
  "numpy>=1.19.5",
  "nptyping>=2.5.0",
]
authors = [
  {name = "Andrew DalPino", email = "support@andrewdalpino.com"},
]
description = "A Python implementation of the OkBloomer algorithm, an autoscaling Bloom filter with ultra-low memory footprint."
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["mypy"]
test = ["mypy"]

[project.urls]
Homepage = "https://github.com/andrewdalpino/PyBloomer"
Documentation = "https://github.com/andrewdalpino/PyBloomer/README.md"
Source = "https://github.com/andrewdalpino/PyBloomer"
